--- a/denovolyzerManuscript.Rmd
+++ b/denovolyzerManuscript.Rmd
@@ -2,8 +2,8 @@
 title: "Interpreting *de novo* variation in human disease using **denovolyzeR**"
 author: "Authors: James S. Ware^1-4^, Kaitlin E. Samocha^1-3^, Mark J. Daly^1-3^"
 output:
-word_document:
-reference_docx: template.docx
+  word_document:
+    reference_docx: template.docx
 ---
 
 Title ideas:  
@@ -252,21 +252,23 @@ Previous work established that the mutability of a base can be sufficiently mode
 
 We then consider each base in the coding sequence and use the mutation rate table to determine its probability of mutating to the other bases. We predict the impact of the mutation on the protein product and aggregate the probabilities by mutation type across each gene. These per-gene probabilities are then adjusted for how well sequenced the gene was and regional divergence between humans and macaques.
 
-Given that the number of de novo variants per trio follows a Poisson distribution{PMID:22495311}, we use the Poisson distribution to evaluate the excesses of de novo events. As an example, to determine if a particular gene has more de novo loss-of-function variants than expected, we multiply that gene’s probability of a loss-of-function mutation by the number of trios and by 2 (for the number of chromosomes) in the study. The resulting number is used as the expectation (lambda value) to which the observed number of de novo loss-of-function variants. Specifically, the `ppois` command in R is used. The three de novo loss-of-function variants seen in DYRK1A are used in the example below. Note that, given the way that `ppois` works, one is subtracted from the observed number when expectation is lower than observation.
-```{r}
-n_lof_dyrk1a <- 3
-prob_lof_dyrk1a <- 2.52829677579e-06
-n_trios <- 1078
-ppois(n_lof_dyrk1a-1, prob_lof_dyrk1a*n_trios*2, lower=FALSE)
-```
-
-denovolyze yields the same result:
+Given that the number of de novo variants per trio follows a Poisson distribution{PMID:22495311}, we use the Poisson distribution to evaluate the excesses of de novo events. As an example, to determine if a particular gene has more de novo loss-of-function variants than expected, we multiply that gene’s probability of a loss-of-function mutation by the number of trios and by 2 (for the number of chromosomes) in the study. The resulting number is used as the expectation (lambda value) to which the observed number of de novo loss-of-function variants. Specifically, the `ppois` command in R is used. The three de novo loss-of-function variants seen in DYRK1A are used in the example below. With `denovolyze`, we get the following result:
 ```{r}
 denovolyzeByGene(genes=autismDeNovos$gene,
                  classes=autismDeNovos$class,
                  nsamples=1078,
                  includeGenes="DYRK1A",
                  geneId="geneName")
+```
+
+We can reproduce this with the `ppois` function, that is built-in to `R`.  Note that by default, `ppois(q,lambda)` will return the probability of observing $\leq q$ events for a given $\lambda$.  We are interested in computing  $p(obs \geq q)$.  `ppois(q,lambda,lower.tail=FALSE)` gives us $p(obs > q)$, and therefore we must use `ppois(q-1,lambda,lower.tail=FALSE)` to obtain $p(obs \geq q)$.
+```{r}
+n_lof_dyrk1a <- 3
+prob_lof_dyrk1a <- 2.52829677579e-06
+n_trios <- 1078
+ppois(q=n_lof_dyrk1a-1, #observed - 1
+      lambda=prob_lof_dyrk1a*n_trios*2, #expected
+      lower.tail=FALSE)
 ```
 
 
