--- a/denovolyzerManuscript.Rmd
+++ b/denovolyzerManuscript.Rmd
@@ -92,23 +92,13 @@ denovolyzeByClass(genes=autismDeNovos$gene,
                   nsamples=1078)
 ```
 
-Note that we receive a warning that our input data contains some gene identifiers that are not recognised by **denovolyzeR**.  These are interpreted as HGNC ID. The demonstration data were annotated using the Ensembl Variant Effect Predictor{ref}, which provides alternative IDs (e.g. from UniProtKB) when HGNC identifiers are not available - these are listed as "geneName". By specifying that we are using "geneName" as our identifier, with the `geneId` argument, we can include these genes that do not have an HGNC ID in our analysis.
-```{r}
-denovolyzeByClass(genes=autismDeNovos$gene,
-                  classes=autismDeNovos$class,
-                  nsamples=1078,
-                  geneId="geneName")
-```
-
-
 The output can be customized to display only a subset of variant classes of interest
 
 ```{r}
 denovolyzeByClass(genes=autismDeNovos$gene,
                   classes=autismDeNovos$class,
                   nsamples=1078,
-                  includeClasses=c("mis","lof"),
-                  geneId="geneName")
+                  includeClasses=c("mis","lof"))
 ```
 
 or to display increased granularity.  By default, nonsense, frameshift & splice variants analysed in combination as "lof", but may be analysed separately
@@ -116,8 +106,7 @@ or to display increased granularity.  By default, nonsense, frameshift & splice 
 denovolyzeByClass(genes=autismDeNovos$gene,
                   classes=autismDeNovos$class,
                   nsamples=1078,
-                  includeClasses=c("frameshift","non","splice","lof"),
-                  geneId="geneName")
+                  includeClasses=c("frameshift","non","splice","lof"))
 ```
 
 
@@ -147,8 +136,7 @@ The same three arguments are required as for BASIC PROTOCOL 1: `genes` (vector o
 denovolyzeMultiHits(genes=autismDeNovos$gene,
                     classes=autismDeNovos$class,
                     nsamples=1078,
-                    nperms=100,
-                    geneId="geneName")
+                    nperms=100)
 ```
 For each variant class, the function returns the observed number of genes containing multiple *de novo* variants in the user data provided, the average number of genes containing multiple hits across `nperms` permutations, the maximum number of genes containing multiple hits in any permutation, and an empirical p value.  In this case the empirical p value is returned as 0, indicating < 1/nperms (in this case <0.01).  We can obtain a better estimate by increasing the number of permutations. Note that the exact numbers may change slightly between runs of `denovolyzeMultiHits` due to stochastic changes. The larger the number used for `nperms`, the smaller the change in numbers.
 ```{r}
@@ -156,8 +144,7 @@ denovolyzeMultiHits(genes=autismDeNovos$gene,
                     classes=autismDeNovos$class,
                     nsamples=1078,
                     nperms=5000,
-                    includeClasses="prot",
-                    geneId="geneName")
+                    includeClasses="prot")
 ```
 Finally it reports that total number of *de novo* of a given class, which is the number used as input to the permutation.
 
@@ -169,8 +156,7 @@ sum(autismDeNovos$class %in% c("frameshift","non","splice"))
 denovolyzeMultiHits(genes=autismDeNovos$gene,
                     classes=autismDeNovos$class,
                     nsamples=1078,
-                    includeClasses="lof",
-                    geneId="geneName")
+                    includeClasses="lof")
 ```
 The expected number of *de novo* variants is controlled by the `expectedDNMs` argument, whose default value is "actual".  This is a conservative approach, addressing the question: “given the number of variants in our dataset, do we see more genes with >1 variant than expected?”  An alternative approach simply asks whether there are more genes with >1 variant than our *de novo* model predicts. This is accessed by setting `expectedDNMs="expected"`.
 ```{r}
@@ -178,8 +164,7 @@ denovolyzeMultiHits(genes=autismDeNovos$gene,
                     classes=autismDeNovos$class,
                     nsamples=1078,
                     includeClasses="lof",
-                    expectedDNMs="expected",
-                    geneId="geneName")
+                    expectedDNMs="expected")
 ```
 
 
@@ -203,8 +188,7 @@ This function will return one row per gene, ordered according the significance o
 head(
   denovolyzeByGene(genes=autismDeNovos$gene,
                    classes=autismDeNovos$class,
-                   nsamples=1078,
-                   geneId="geneName")
+                   nsamples=1078)
   )
 ```
 
@@ -216,8 +200,7 @@ head(
   denovolyzeByGene(genes=autismDeNovos$gene,
                    classes=autismDeNovos$class,
                    nsamples=1078,
-                   includeClasses="syn",
-                   geneId="geneName")
+                   includeClasses="syn")
   )
 ```
 
@@ -236,9 +219,9 @@ As for protocol 1:
 library(denovolyzeR)
 ```
 
-2) Define a geneset. This should be a vector of genes, which may be entered by hand, or read from file using `read.table` or equivalent.  In this example, we use an example geneset included with the **denovolyzeR** package, a list of `r length(denovolyzeR::FMRPgenes)` genes that interact with the fragile X mental retardation protein (FMRP) taken from Darnell et al{PMID:21784246}.
+2) Define a geneset. This should be a vector of genes, which may be entered by hand, or read from file using `read.table` or equivalent.  In this example, we use an example geneset included with the **denovolyzeR** package, a list of `r nrow(denovolyzeR::fmrpGenes)` genes that interact with the fragile X mental retardation protein (FMRP) taken from Darnell et al{PMID:21784246}.
 ```{r}
-length(FMRPgenes);head(FMRPgenes)
+nrow(fmrpGenes);head(fmrpGenes)
 ```
 
 3) Evaluate the frequency of *de novo* events in our pre-specified genelist, using the `denovolyzeByClass` function.  Specify the genelist using the `includeGenes` argument, which defaults to "all", but accepts a vector of genes.
@@ -246,8 +229,7 @@ length(FMRPgenes);head(FMRPgenes)
 denovolyzeByClass(genes=autismDeNovos$gene,
                   classes=autismDeNovos$class,
                   nsamples=1078,
-                  includeGenes=FMRPgenes,
-                  geneId="geneName")
+                  includeGenes=fmrpGenes)
 ```
 In this example we see a highly significant enrichment of *de novo* lof variants in genes that interact with FMRP in our cohort of autism cases. These results depend on similar gene annotations for the geneset and list of de novo variants. For example, if the de novo list contains KMT2D (previously known as MLL2) but the geneset lists MLL2, these will not be matched.
 
@@ -272,8 +254,7 @@ Given that the number of de novo variants per trio follows a Poisson distributio
 denovolyzeByGene(genes=autismDeNovos$gene,
                  classes=autismDeNovos$class,
                  nsamples=1078,
-                 includeGenes="DYRK1A",
-                 geneId="geneName")
+                 includeGenes="DYRK1A")
 ```
 
 We can reproduce this with the `ppois` function, that is built-in to `R`.  Note that by default, `ppois(q,lambda)` will return the probability of observing $\leq q$ events for a given $\lambda$.  We are interested in computing  $p(obs \geq q)$.  `ppois(q,lambda,lower.tail=FALSE)` gives us $p(obs > q)$, and therefore we must use `ppois(q-1,lambda,lower.tail=FALSE)` to obtain $p(obs \geq q)$.
